fixed landscape mode layout issue

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 body {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   height: 100vh;
   width: 100vw;
